--- a/host.css
+++ b/host.css
@@ -123,6 +123,12 @@ main .host-background .overlay .form .last {
   background-color: var(--active-color);
   cursor: pointer;
   text-decoration: none;
+  font-family: var(--secondary-font);
+  font-size: 20px;
+  color: var(--primary-color);
+  border: 0px;
+  background-color: transparent;
+  cursor: pointer;
  }
 
  main .host-background .overlay .form a button {
@@ -175,4 +181,20 @@ main .host-background .overlay .form .last {
  main .host-background .overlay-second .forCards {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  
  } 
+
+ main .host-background .overlay-second .forCards a {
+  text-decoration: none;
+  width: fit-content;
+ }
+
+main .host-background .overlay-second .forCards div p {
+  font-family: var(--primary-font);
+  color: var(--primary-color);
+}
+
+main .host-background .overlay-second .forCards div img {
+  height: 300px;
+}
