--- a/booking.css
+++ b/booking.css
@@ -86,11 +86,8 @@ main .gallery .overlay .bookingForm .bottom .right label {
 }
 
 
-main .gallery .overlay .bookingForm .bottom .right div {
-  margin-left: 20px;
-}
 
-main .gallery .overlay .bookingForm .bottom .right button {
+main .gallery .overlay .bookingForm .bottom .right #submit {
   width: 130px;
   height: 40px;
   border: 0px;
