--- a/responsiveBooking.css
+++ b/responsiveBooking.css
@@ -76,6 +76,7 @@
      #roomImage {
         width: 300px;
      }
+    }
      
      @media screen and (max-width: 1335px) {
         #hotelName {
@@ -105,6 +106,7 @@
             width: 150px;
         }  
      }
+
      @media screen and (max-width: 1130px) {
         img {
             width: 200px;
@@ -195,13 +197,22 @@
             border: 0px;
         }
 
-        
+        main .gallery .overlay .bookingForm {
+            display: block;
+        }
+
+    
 
         #roomDescr {
             width: 300px;
             margin-top: 50px;
             height: 180px;
             margin-left: 50px;
+        }
+
+        #hotelDescr {
+            width: 280px;
+            margin-left: 10px;
         }
 
         #hotelName {
@@ -235,4 +246,78 @@
 
     }
 
-}
+    @media screen and (max-width: 690px) {
+        main .gallery .overlay .bookingForm .bottom {
+            margin-right: 80px;
+        }
+    }
+    
+    @media screen and (max-width: 670px) {
+        main .gallery .overlay .bookingForm .bottom .left {
+            width: 300px;
+        }
+        header .right-header nav ul .profile {
+            margin-top: 7px;
+       }
+    }
+
+    @media screen and (max-width: 500px) {
+        header .right-header nav ul .profile {
+            margin-top: 8px;
+        }
+        
+    }
+
+    @media screen and (max-width: 530px) {
+        main .gallery .overlay .bookingForm .bottom .left {
+            width: 250px;
+        }
+
+        main .gallery .overlay .bookingForm .bottom .mid {
+            width: 300px;
+        }
+
+        #roomDescr {
+            width: 200px;
+        }
+
+        main .gallery .overlay .bookingForm .bottom .mid div .card {
+            margin: 0px;
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        .card-img-top {
+            width: 180px;
+        }
+
+        #hotelDescr {
+            width: 190px;
+        }
+        main .gallery .overlay .bookingForm .bottom .mid div .card img {
+            width: 180px;
+            margin-top: 10px;
+            margin-left: 5px;
+        }
+
+        #roomDescr {
+            width: 180px;
+            margin-left: 30px;
+        }
+        
+        .vanilla-calendar {
+            min-width: 150px;
+            margin-right: 50px;
+        }
+        main .gallery .overlay .bookingForm .bottom .mid div .card {
+            width: 180px !important;
+        }
+    }
+
+    @media screen and (max-width: 380px) {
+        header .right-header nav ul .profile {
+            margin-top: 10px;
+        }
+    }
+
+    
